RESULTS/AutoSpec/raw_results/out-4o-oopsla/040_0011/040_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/040_0011/040_merged.c:51:3: error: unterminated comment
   51 |   /*@;
      |   ^
